<resources>
  <string name="app_name">c:geo</string>
  <string name="app_name_compass">c:geo compass</string>
  <string name="maps_api_key">0HEeyLeVKGHZ6X5nAWqVFvyplTNnKUquILfte4w</string>
  <string name="maps_api_key_market">0aqvjxNlVeQ_h3Sfdk2jMTO66naKrxgJsAB-y3Q</string>
  <string name="cache">Cache</string>
  <string name="detail">Detail</string>
  <string name="search">Search</string>
  <string name="settings">Settings</string>
  <string name="helpers">What to install</string>
  <string name="about">About c:geo</string>
  <string name="helper">Do you want to learn about <b>c:geo</b>?\nCheck our easy to read manual.</string>
  <string name="database_error_title">Problem with database</string>
  <string name="database_error_message">c:geo failed to connect to internal database.\nPlease try to start c:geo a bit later. If this message has been showed for many times, proceed to phone Settings / Applications / c:geo and hit the Clear Data button. Or uninstall and install c:geo again. Sorry for inconvenience.</string>
  <string name="action_bar_share_title">Share link to cache</string>
  <string name="all">All caches</string>
  <string name="all_types">All cache types</string>
  <string name="traditional">Traditional cache</string>
  <string name="multi">Multi-cache</string>
  <string name="mystery">Unknown cache</string>
  <string name="letterbox">Letterbox hybrid</string>
  <string name="event">Event cache</string>
  <string name="mega">Mega-event cache</string>
  <string name="earth">Earthcache</string>
  <string name="cito">Cache in trash out event</string>
  <string name="webcam">Webcam cache</string>
  <string name="virtual">Virtual cache</string>
  <string name="wherigo">Wherigo cache</string>
  <string name="lostfound">Lost &amp; found</string>
  <string name="ape">Project ape cache</string>
  <string name="gchq">Groundspeak hq</string>
  <string name="gps">GPS cache exhibit</string>
  <string name="wp_final">Final location</string>
  <string name="wp_stage">Stage of multi-cache</string>
  <string name="wp_puzzle">Question for answer</string>
  <string name="wp_pkg">Parking area</string>
  <string name="wp_trailhead">Trailhead</string>
  <string name="wp_waypoint">Reference point</string>
  <string name="log_found">Found</string>
  <string name="log_dnf">Did not find</string>
  <string name="log_note">Note</string>
  <string name="log_published">Published</string>
  <string name="log_enabled">Enabled</string>
  <string name="log_disabled">Disabled</string>
  <string name="log_attend">Will attend</string>
  <string name="log_attended">Attended</string>
  <string name="log_retrieved">Retrieved</string>
  <string name="log_placed">Placed</string>
  <string name="log_grabbed">Grabbed somewhere</string>
  <string name="log_maintained">Maintenance performed</string>
  <string name="log_maintenance_needed">Needs maintenance</string>
  <string name="log_maintenance_owner">Maintenance</string>
  <string name="log_update">Updated coordinates</string>
  <string name="log_archived">Archived</string>
  <string name="log_needs_archived">Needs archived</string>
  <string name="log_discovered">Discovered</string>
  <string name="log_reviewed">Reviewer note</string>
  <string name="log_taken">Visit</string>
  <string name="log_tb_nothing">Do nothing</string>
  <string name="log_tb_visit">Visit</string>
  <string name="log_tb_drop">Drop here</string>
  <string name="log_tb_changeall">Change all</string>
  <string name="log_save">Save</string>
  <string name="log_saving">Saving log...</string>
  <string name="log_clear">Clear</string>
  <string name="log_post">Post log</string>
  <string name="log_post_rate">Post log &amp; rate</string>
  <string name="log_post_no_rate">Post log &amp; do not rate</string>
  <string name="log_add">Add</string>
  <string name="log_date">Date</string>
  <string name="log_time">Time</string>
  <string name="log_date_time">Date &amp; time</string>
  <string name="log_rating">Rating</string>
  <string name="log_no_rating">No rating</string>
  <string name="log_stars_1">1 star</string>
  <string name="log_stars_2">2 stars</string>
  <string name="log_stars_3">3 stars</string>
  <string name="log_stars_4">4 stars</string>
  <string name="log_stars_5">5 stars</string>
  <string name="log_webcam">Webcam photo taken</string>
  <string name="log_new_log">Log</string>
  <string name="log_new_log_text">Log text</string>
  <string name="log_announcement">Announcement</string>
  <string name="err_none">Ok</string>
  <string name="err_start">Communication not started</string>
  <string name="err_parse">Failed login page parsing</string>
  <string name="err_server">Failed connection to geocaching.com (server or connection down?)</string>
  <string name="err_login">No login information stored</string>
  <string name="err_login_failed">Sorry, c:geo can\'t login.</string>
  <string name="err_unknown">Unknown error</string>
  <string name="err_comm">Unknown communication error</string>
  <string name="err_missing_auth">No username and/or password set.</string>
  <string name="err_wrong">Wrong login informations</string>
  <string name="err_license">User has not agreed to Geocaching.com license agreement, so c:geo can\'t load caches coordinates.</string>
  <string name="err_store">Sorry, c:geo can\'t store cache.</string>
  <string name="err_drop">Sorry, c:geo can\'t drop cache.</string>
  <string name="err_title_problem">Problem</string>
  <string name="err_detail_open">Sorry, c:geo can\'t open geocache details.</string>
  <string name="err_detail_cache">Sorry, c:geo can\'t display geocache you want. Is it really geocache?</string>
  <string name="err_detail_cache_find">Sorry, c:geo can\'t find geocache</string>
  <string name="err_detail_cache_find_some">Sorry, c:geo can\'t find that geocache.</string>
  <string name="err_detail_cache_find_any">Sorry, c:geo can\'t find any geocache.</string>
  <string name="err_detail_cache_find_next">Sorry, c:geo can\'t find next geocaches.</string>
  <string name="err_detail_cache_forgot">Sorry, c:geo forgot which geocache you want.</string>
  <string name="err_detail_cache_forgot_visit">Sorry, c:geo forgot which cache you visited.</string>
  <string name="err_detail_cache_language">c:geo can\'t read some cache details. Please check if the geocaching.com website is set to English. Unfortunately, c:geo doesn\'t understand other localisations.</string>
  <string name="err_detail_no_spoiler">c:geo found no spoiler images for this cache.</string>
  <string name="about_changelog">Changelog</string>
  <string name="about_donate">Donate</string>
  <string name="about_detail">Details</string>
  <string name="about_donation_less">Donate\nless</string>
  <string name="about_donation_more">Donate\ndevelopement</string>
  <string name="auth_authorize">Authorize c:geo</string>
  <string name="auth_pin_hint">PIN assigned by Twitter</string>
  <string name="auth_finish">Finish</string>
  <string name="cache_offline_refresh">Refresh</string>
  <string name="cache_offline_store">Store</string>
  <string name="cache_menu_compass">Compass</string>
  <string name="cache_menu_tbt">Turn-by-turn</string>
  <string name="cache_menu_radar">Radar</string>
  <string name="cache_menu_map">Map</string>
  <string name="cache_menu_map_ext">Show on ext. map</string>
  <string name="popup_more">More details</string>
  <string name="popup_offline">Offline</string>
  <string name="waypoint_edit">Edit</string>
  <string name="waypoint_delete">Delete</string>
  <string name="author">Author: <a href="http://carnero.cc/">carnero</a></string>
  <string name="support">Support: <a href="mailto:carnero@carnero.cc">carnero@carnero.cc</a></string>
  <string name="website">Website: <a href="http://cgeo.carnero.cc/">cgeo.carnero.cc</a></string>
  <string name="facebook">Facebook: <a href="http://www.facebook.com/pages/cgeo/297269860090">c:geo page</a></string>
  <string name="twitter">Twitter: <a href="http://twitter.com/android_gc">@android_GC</a></string>
  <string name="about_auth_1">The following process allows <b>c:geo</b> to access Twitter - if agreed.</string>
  <string name="about_auth_2">Click on \"authorize c:geo\" button will start the process. This process will open up a web browser with Twitter page. Login on this page and allow <b>c:geo</b> to access your account. If accepted, Twitter will show up a numeric PIN code. This PIN must be pasted into <b>c:geo</b> and be confirmed. That\'s all.</string>
  <string name="changelog">\n
    <b>2.26</b> (__.07.2011)\n
	· new: Autoinsert of signature\n
	· fix: Live map, better loading\n
	· fix: Overwriting coords with wrong ones\n
	· fix: Loading caches on Live map\n
	· fix: GCVote issues\n
	\n
    <b>2.25</b> (11.06.2011)\n
	· fix: Performance &amp; usability\n
	· fix: Maps in Japan\n
	\n
    <b>2.24</b> (31.05.2011)\n
	· fix: Performance optimizations\n
	· fix: Other users on map\n
	· fix: Displaying single cache on map\n
	· fix: LOT of different things\n
	· new: Distance circles for caches\n
	\n
    <b>2.22</b> (18.05.2011)\n
	· fix: Few minor problems\n
	\n
    <b>2.21.x</b> (10.05.2011)\n
	· fix: Names in list\n
	· fix: Found caches\n
	· fix: Switching to English\n
	· fix: Live map\n
	· fix: Logging of trackables\n
	\n
    <b>2.20</b> (06.05.2011)\n
	· Fixed many issues from prev. version\n
	· Finished adaptation\n
	\n
    <b>2.13.x</b> (05.05.2011)\n
	· change: Optimized map\n
	· change: Search for GPX files in /gpx\n
	· fix: Adaptation on GC.com changes\n
	· fix: Posting logs with a lot of TBs\n
	· fix: Logtypes for cache owner\n
	· fix: Displaying spoiler images\n
	· missing: Other users on map\n
	· missing: Action for all TBs when logging\n
	\n
    <b>2.13</b> (14.04.2011)\n
	· fix: Own waypoints on map\n
	\n
    <b>2.12, 2.11</b> (13.04.2011)\n
	· fix: Sorting caches with disabled GPS\n
	· fix: Compatibility issues for &lt;2.1\n
	\n
    <b>2.10</b> (13.04.2011)\n
	· fix: Moving caches during refresh\n
	· fix: Opening Radar\n
	· remove: Closest cache bubble on Live map\n
	· new: Remembering last used list\n
	· new: Number of logs in detail\n
	· new: Sorting caches in list\n
	\n
    <b>2.09</b> (24.03.2011)\n
	· new: Caches lists\n
	· fix: Disabling of Twitter\n
	· fix: Unified navigation options\n
	· fix: Line breaks in logs\n
	\n
    <b>2.08</b> (17.03.2011)\n
	· fix: Faster displaying caches on the map\n
	· change: Visual style of loading of caches\n
	· return: Static maps\n
	\n
    <b>2.07</b> (16.03.2011)\n
	· new: Approx. elevation in details\n
	· new: Terrain preview\n
	· new: Own waypoints on map\n
	· new: Translation of description &amp; hint\n
	· new: Database backup/restore\n
	· remove: Static maps\n
	\n
    <b>2.06</b> (10.03.2011)\n
	· fix: Size of caches in lists\n
	· fix: Marking own caches\n
	· new: Translation PL\n
	\n
    <b>2.05</b> (09.03.2011)\n
	· fix: Marking caches as found\n
	· fix: Own caches\n
	· fix: Some optimizations\n
	· fix: Event caches\n
	· new: Trackable icon\n
	· new: Search using HW key\n
	· new: List of supported apps\n
	\n
    <b>2.04</b> (20.02.2011)\n
	· new: Logs for trackables\n
	· new: Access to map from "any dest."\n
	· new: Ability to force English\n
	· fix: Favorites count\n
	· update: Translation\n
	\n
    <b>2.03</b> (13.02.2011)\n
	· fix: Loading images in cache description\n
	· fix: GC/TB code input\n
	· update: Translation (SV, PT)\n
	\n
    <b>2.02</b> (02.02.2011)\n
	· new: History of logged caches (online&amp;offline)\n
	· fix: Number of found caches in signature\n
	· fix: Exact position of caches on Live Map\n
	· fix: Adaptation for GC.com changes\n
	\n
    <b>2.01</b> (23.01.2011)\n
	· fix: Fixed crashing due to loading large images\n
	\n
    <b>2.00</b> (23.01.2011)\n
	· new: Context menu for geocachers (in cache detail)\n
	· new: Option to add date, time and signature at once\n
	· new: Better trackable support\n
	· new: Signature template\n
	· new: Any destination saves last used location\n
	· fix: End of line in logs\n
	\n</string>
</resources>