<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:background="?background_color" >
	<LinearLayout style="@style/action_bar">
		<ImageView style="@style/action_bar_action"
				android:onClick="goHome" />
		<View style="@style/action_bar_separator" />
		<TextView style="@style/action_bar_title" />
	</LinearLayout>
	<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:padding="4dip"
			android:orientation="vertical" >
		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginTop="10dip"
				android:orientation="vertical" >
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentLeft="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="?text_color"
					android:text="@string/about_text" />
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView style="@style/separator_horizontal_headline"
						android:text="@string/about_donate" />
			</RelativeLayout>
			<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dip"
					android:orientation="horizontal"
					android:gravity="center_horizontal" >
				<Button style="@style/button"
						android:id="@+id/donation_more"
						android:layout_width="180dip"
						android:singleLine="false"
						android:lines="2"
						android:onClick="donateMore"
						android:text="@string/about_donation_more" />
				<Button style="@style/button"
						android:id="@+id/donation_less"
						android:layout_width="100dip"
						android:singleLine="false"
						android:lines="2"
						android:onClick="donateLess"
						android:text="@string/about_donation_less" />
			</LinearLayout>
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView style="@style/separator_horizontal_headline"
						android:text="@string/about_detail" />
			</RelativeLayout>
			<TextView android:id="@+id/author"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="?text_color"
					android:textColorLink="?text_color_link"
					android:linksClickable="false"
					android:focusable="true"
					android:clickable="true"
					android:onClick="author"
					android:text="@string/author" />
			<TextView android:id="@+id/support"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="?text_color"
					android:textColorLink="?text_color_link"
					android:linksClickable="false"
					android:focusable="true"
					android:clickable="true"
					android:onClick="support"
					android:text="@string/support" />
			<TextView android:id="@+id/website"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="?text_color"
					android:textColorLink="?text_color_link"
					android:linksClickable="false"
					android:focusable="true"
					android:clickable="true"
					android:onClick="website"
					android:text="@string/website" />
			<TextView android:id="@+id/facebook"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="?text_color"
					android:textColorLink="?text_color_link"
					android:linksClickable="false"
					android:focusable="true"
					android:clickable="true"
					android:onClick="facebook"
					android:text="@string/facebook" />
			<TextView android:id="@+id/twitter"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="?text_color"
					android:textColorLink="?text_color_link"
					android:linksClickable="false"
					android:focusable="true"
					android:clickable="true"
					android:onClick="twitter"
					android:text="@string/twitter" />
			<TextView android:id="@+id/graphic"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="?text_color"
					android:textColorLink="?text_color_link"
					android:linksClickable="false"
					android:text="@string/graphic" />
			<RelativeLayout style="@style/separator_horizontal_layout" >
				<View style="@style/separator_horizontal" />
				<TextView style="@style/separator_horizontal_headline"
						android:text="@string/about_changelog" />
			</RelativeLayout>
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="12dip"
					android:layout_marginLeft="7dip"
					android:layout_marginRight="7dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="right"
					android:paddingRight="3dip"
					android:textSize="12dip"
					android:textColor="?text_color_grey"
					android:text="@string/changelog" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
