<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:background="?background_color" >
	<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:padding="4dip"
			android:orientation="vertical" >
		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginTop="10dip"
				android:orientation="vertical" >
			<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:padding="7dip" >
				<ImageView
						android:layout_width="64dip"
						android:layout_height="64dip"
						android:maxWidth="64dip"
						android:maxHeight="64dip"
						android:scaleType="fitXY"
						android:layout_alignParentTop="true"
						android:layout_alignParentLeft="true"
						android:layout_marginTop="7dip"
						android:layout_marginBottom="7dip"
						android:layout_marginLeft="7dip"
						android:layout_marginRight="7dip"
						android:src="@drawable/icon_big" />
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dip"
						android:layout_marginRight="10dip"
						android:layout_marginBottom="5dip"
						android:layout_alignParentRight="true"
						android:layout_gravity="left|center_vertical"
						android:gravity="left|center_vertical"
						android:textSize="14dip"
						android:textColor="?text_color"
						android:text="@string/about_auth_1" />
			</LinearLayout>
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left|center_vertical"
					android:gravity="left|center_vertical"
					android:textSize="14dip"
					android:textColor="?text_color"
					android:text="@string/about_auth_2" />
			<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="7dip" >
				<EditText style="@style/edittext"
						android:id="@+id/pin"
						android:visibility="gone"
						android:inputType="number"
						android:hint="@string/auth_pin_hint" />
				<Button style="@style/button"
						android:id="@+id/pin_button"
						android:visibility="gone"
						android:text="@string/auth_finish" />
				<Button style="@style/button"
						android:id="@+id/start"
						android:text="@string/auth_authorize" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>