<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:background="?background_color" >
	<LinearLayout style="@style/action_bar">
		<ImageView style="@style/action_bar_action"
				android:onClick="goHome" />
		<View style="@style/action_bar_separator" />
		<TextView style="@style/action_bar_title" />
	</LinearLayout>
	<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:padding="4dip"
			android:orientation="vertical" >
		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
			<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="6dip"
					android:layout_marginRight="6dip"
					android:orientation="horizontal" >
				<TextView android:id="@+id/type"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="left"
						android:padding="3dip"
						android:lines="1"
						android:singleLine="true"
						android:scrollHorizontally="true"
						android:ellipsize="marquee"
						android:textSize="12dip"
						android:textColor="?text_color_headline"
						android:text="@null" />
				<TextView android:id="@+id/identification"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="left"
						android:padding="3dip"
						android:lines="1"
						android:singleLine="true"
						android:scrollHorizontally="true"
						android:ellipsize="marquee"
						android:textSize="12dip"
						android:textColor="?text_color_headline"
						android:text="@null" />
			</LinearLayout>
			<TextView android:id="@+id/note"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="6dip"
					android:layout_marginRight="6dip"
					android:padding="3dip"
					android:textSize="14dip"
					android:textColor="?text_color" />
			<RelativeLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" >
				<Button style="@style/button_small"
						android:id="@+id/delete"
						android:visibility="gone"
						android:layout_width="60dip"
						android:layout_marginRight="71dip"
						android:layout_alignParentRight="true"
						android:text="@string/waypoint_delete" />
				<Button style="@style/button_small"
						android:id="@+id/edit"
						android:layout_width="60dip"
						android:layout_alignParentRight="true"
						android:text="@string/waypoint_edit" />
			</RelativeLayout>
			<LinearLayout android:id="@+id/navigation_part"
					android:visibility="gone"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:orientation="vertical" >
				<RelativeLayout style="@style/separator_horizontal_layout" >
					<View style="@style/separator_horizontal" />
					<TextView style="@style/separator_horizontal_headline"
					android:text="@string/waypoint_navigation" />
				</RelativeLayout>
				<Button style="@style/button"
						android:id="@+id/compass"
						android:text="@string/cache_menu_compass" />
				<Button style="@style/button"
						android:id="@+id/radar"
						android:text="@string/cache_menu_radar" />
				<Button style="@style/button"
						android:id="@+id/map"
						android:text="@string/cache_menu_ map" />
				<Button style="@style/button"
						android:id="@+id/map_ext"
						android:text="@string/cache_menu_map_ext" />
				<Button style="@style/button"
						android:id="@+id/turn"
						android:text="@string/cache_menu_tbt" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
