<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:background="#FFFFFFFF" >
	<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:padding="4dip"
			android:orientation="vertical" >
		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginTop="10dip"
				android:orientation="vertical" >
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentLeft="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="#FF000000"
					android:text="@string/about" />
			<TextView android:id="@+id/cgeo_version"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="#FF000000"
					android:text="version: unknown" />
			<TextView android:id="@+id/author"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="#FF000000"
					android:textColorLink="@color/link"
					android:linksClickable="false"
					android:text="@string/author" />
			<TextView android:id="@+id/support"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="#FF000000"
					android:textColorLink="@color/link"
					android:linksClickable="false"
					android:text="@string/support" />
			<TextView android:id="@+id/website"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="#FF000000"
					android:textColorLink="@color/link"
					android:linksClickable="false"
					android:text="@string/website" />
			<TextView android:id="@+id/facebook"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="#FF000000"
					android:textColorLink="@color/link"
					android:linksClickable="false"
					android:text="@string/facebook" />
			<TextView android:id="@+id/twitter"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:layout_marginBottom="5dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="left"
					android:textSize="14dip"
					android:textColor="#FF000000"
					android:textColorLink="@color/link"
					android:linksClickable="false"
					android:text="@string/twitter" />
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_gravity="right|top"
					android:layout_marginTop="10dip"
					android:lines="1"
					android:singleLine="true"
					android:scrollHorizontally="true"
					android:ellipsize="marquee"
					android:textSize="22dip"
					android:textColor="#66000000"
					android:text="changelog" />
			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="12dip"
					android:layout_marginLeft="7dip"
					android:layout_marginRight="7dip"
					android:layout_alignParentRight="true"
					android:layout_gravity="right"
					android:paddingRight="3dip"
					android:textSize="12dip"
					android:textColor="#99000000"
					android:text="@string/changelog" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
